Rename to skrit

--- a/drawskrit.html
+++ b/drawskrit.html
@@ -3,6 +3,6 @@
     <body>
         <textarea id="input" cols="40", rows="40"></textarea>
         <canvas id="drawing" width="640" height="640"></canvas>
-        <script src="drawscript.js"></script>
+        <script src="drawskrit.js"></script>
     </body>
 </html>
